objects/TW1_Fidelidade__c.object
<CustomObject>
    
    <fields>
        <fullName>Acao_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marcado quando o Marketing torna o cliente Platinum manualmente.</inlineHelpText>
        <label>Ação Marketing</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>TW1_Bonus_Aniversario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bônus Aniversário</label>
        <type>Checkbox</type>
    </fields>
    
    
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Modalidade__c</fullName>
        <label>Modalidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    
    
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Fidelidade</relationshipLabel>
        <relationshipName>Fidelidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Utilizado__c</fullName>
        <label>Utilizado</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cartão Estacionamento, Vinho</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fidelidade</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número Fidelidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fidelidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
</CustomObject>